# simias

./: ChangeLog  ChangeLog.client  ChangeLog.server  Makefile.am  README.build  SimiasLib.csproj  autogen.sh  build-server-linux.sh  build-simias-linux.sh  configure.in  ifolder3-enterprise.changes  ifolder3-enterprise.sh  simias-client.sh  simias.changes
Simias.HttpFile/src/: Makefile.am  SimiasFile.cs
admin/: Makefile.am  README  autogen.sh  configure.in  iFolderAdmin.sln  ifolder-admin.pc.in  update-wsdl
admin/package/: Makefile.am
admin/package/linux/: Makefile.am  ifolder-admin.spec.in
admin/package/windows/: Makefile.am
admin/src/Admin/: AccountEnabled.ascx  Admin.csproj  Default.aspx  Default.aspx.cs  Error.aspx.cs  Global.asax.cs  Header.ascx.cs  Login.aspx.cs  MemberSelect.aspx  MemberSelect.aspx.cs  MemberSelect.css  PageFooter.ascx.cs  Policy.ascx  iFolderAdmin.css  iFolderWebLogger.cs
admin/src/Setup/: AssemblyInfo.cs.in  Makefile.am  Options.cs  Prompt.cs  iFolderAdminSetup.cs  ifolder-admin-setup.in
server/src/: Makefile.am
server/src/Simias.HttpFile/: Makefile.am  SimiasFile.cs
server/src/Simias.Rss/: PublicFeedHandler.cs  RssFeed.cs  Simias.Rss.csproj
server/src/Simias.Server/: User.cs
server/src/iFolder.WebService/: Download.ashx  iFolderAdmin.wsdl  iFolderUser.cs
server/src/setup/: simias-server-setup.cmd
simias/: ChangeLog  Makefile.am  Simias.csproj  SimiasLib.csproj  autogen.sh  configure.in
simias-server/src/MdbSync/: Makefile  Makefile.am  Makefile.am.save  Makefile.in  ThreadService.cs
simias-server/src/SimpleProvider/: Makefile.am  SimpleProvider.mdp  ThreadService.cs
simias/core/CollectionStore/: Node.cs
simias/core/DomainProvider/: DomainProvider.cs  LocalProvider.cs
simias/core/DomainWatcher/: DomainWatcher.cs
simias/core/Journal/: Journal.cs
simias/core/POBox/: POBox.cs
simias/core/Simias.Web/: SharedCollection.cs
simias/core/SimiasClient/: Authentication.cs  Makefile.am  NodeTypes.cs
simias/core/SimiasLib.dll/: SimiasLib.dll.sources
simias/core/Sync/: SyncClient.cs
simias/other/SimpleServer/: DomainService.asmx.cs  SimpleDomain.cs  SimpleServerAuthentication.cs
simias/package/: ChangeLog
simias/package/linux/: Makefile.am  ifolder3-server.spec.autobuild  simias.spec.autobuild  simias.spec.in
simias/package/windows/: Makefile.am  simias-msm.ism
simias/src/: ChangeLog  Makefile.am
simias/src/CollectionStore/: Collection.cs  Domain.cs  HostNode.cs  ICSEnumerator.cs  Identity.cs  JournalEntry.cs  Node.cs  Property.cs  ShallowNode.cs  Store.cs
simias/src/Common/: CertificateStore.cs  Configuration.cs  ISimiasLog.cs  WebState.cs
simias/src/Credentials/: Credentials.cs
simias/src/Domain/: DomainAgent.cs
simias/src/DomainProvider/: DomainProvider.cs  EnterpriseProvider.cs  IDomainProvider.cs  LocalProvider.cs
simias/src/DomainWatcher/: DomainWatcher.cs  Service.cs
simias/src/HttpAuthentication/: HttpAuth.cs  IAuthService.cs
simias/src/Journal/: Journal.cs
simias/src/Login/: Login.ashx.cs
simias/src/POBox/: POBox.cs  POBoxServiceProxy.cs  POManager.cs  SubscriptionThread.cs
simias/src/POBoxWS/: POBoxService.asmx.cs
simias/src/Service/: Manager.cs
simias/src/Simias.Web/: SharedCollection.cs
simias/src/Simias.dll/: Simias.dll.sources
simias/src/SimiasApp/: Makefile.am  Simias.cs  Simias.csproj  SimiasAppInstallerClass.cs
simias/src/SimiasClient/: Authentication.cs  CertPolicy.cs  CollectionSyncEventArgs.cs  LocalService.cs  Manager.cs
simias/src/SimiasLib.dll/: Makefile.am  SimiasLib.dll.sources
simias/src/Storage/: PropertyTags.cs
simias/src/Sync/: ClientFile.cs  FileMonitor.cs  HashMap.cs  Http.cs  ServerFile.cs  SyncClient.cs  SyncFile.cs  SyncService.cs
simias/src/admin/: Admin.csproj  (+87 more)
src/admin/: AccountEnabled.ascx  AccountEnabled.ascx.cs  AddDataPath.aspx  AddDataPath.aspx.cs  AdminRights.aspx  AdminRights.aspx.cs  CreateUser.aspx  CreateUser.aspx.cs  CreateUser.css  CreateiFolder.aspx.cs  Default.aspx.cs  DisableSharing.ascx  DisableSharing.ascx.cs  DiskSpaceQuota.ascx  DiskSpaceQuota.ascx.cs  Error.aspx  Error.aspx.cs  FileSizeFilter.ascx  FileSizeFilter.ascx.cs  FileTypeFilter.ascx  FileTypeFilter.ascx.cs  Footer.ascx  Footer.ascx.cs  Global.asax.cs  Header.ascx.cs  ICLogout.aspx.cs  LdapAdminAuth.aspx  LdapAdminAuth.aspx.cs  ListFooter.ascx  ListFooter.ascx.cs  Log4Net.config.in  LogTailHandler.ashx  LogTailHandler.ashx.cs  Login.aspx  Login.aspx.cs  Makefile.am  MemberSearch.ascx  MemberSearch.ascx.cs  MemberSelect.aspx  MemberSelect.aspx.cs  (+74 more)
src/server/: ChangeLog  Makefile.am  Simias.config.in  server.mds  server.sln  simias-server.cmd.in  simias-server.in  simiasserver.cmd.in
src/webaccess/: AssemblyInfo.cs.in  Browse.aspx  Browse.aspx.cs  ChangeLog  Default.aspx.cs  Details.aspx  Details.aspx.cs  Download.ashx.cs  Entry.aspx.cs  Error.aspx  Error.aspx.cs  Global.asax  Global.asax.cs  Header.ascx  Header.ascx.cs  History.aspx  History.aspx.cs  HomeContext.ascx  HomeContext.ascx.cs  ICLogout.aspx.cs  ItemHistory.aspx  ItemHistory.aspx.cs  Log4Net.config  Log4Net.config.in  Login.aspx  Login.aspx.cs  Makefile.am  Members.aspx  Members.aspx.cs  Message.ascx  Message.ascx.cs  NewFolder.aspx.cs  Pagging.ascx  Pagging.ascx.cs  Quota.ascx.cs  Search.aspx  Search.aspx.cs  Settings.aspx  Settings.aspx.cs  Share.aspx  (+40 more)
src/webservices/: AssemblyInfo.cs.in  ChangeEntry.cs  ChangeLog  Download.ashx.cs  Exceptions.cs  FileHandler.cs  GenerateWsdl.cs  IdentityPolicy.cs  LastSyncInfo.cs  LdapSettings.cs  LdapSyncStatus.cs  Makefile.am  MemberRole.cs  NodeUtility.cs  Rights.cs  SampleData.cs  SearchOperation.cs  SearchProperty.cs  Settings.cs  SmartException.cs  SyncServiceInfo.cs  SystemPolicy.cs  Upload.ashx.cs  UserPolicy.cs  iFolder.WebService.Local.csproj  iFolder.WebService.csproj  iFolder.cs  iFolderAdmin.asmx  iFolderAdmin.asmx.cs  iFolderAdmin.de.resx  iFolderAdmin.es.resx  iFolderAdmin.hu.resx  iFolderAdmin.wsdl  iFolderAdminLocal.asmx  iFolderAdminLocal.asmx.cs  iFolderCommonLocal.cs  iFolderDetails.cs  iFolderEntry.cs  iFolderEntryType.cs  iFolderFile.cs  (+9 more)
(+2308 files in other folders)
