DIST_SUBDIRS = core client server webservices webaccess admin setup

if SIMIAS_AS_CLIENT
SUBDIRS = core client
else
SUBDIRS = core server webservices webaccess admin setup utils
endif


EXTRA_DIST = 

install-exec-local:

uninstall-local:

installcheck-summary:

clean-local:

distclean-local:

maintainer-clean-local:

